chore: rename `master` branch references to `main` branch

--- a/src/pages/developing/react-tutorial/step-2.mdx
+++ b/src/pages/developing/react-tutorial/step-2.mdx
@@ -95,7 +95,7 @@ You should see something similar to where the
 
 Before we get started with this step, we'll be adding some components that
 require IE11 polyfills. As shown in the
-[Carbon React documentation](https://github.com/carbon-design-system/carbon/blob/master/packages/react/.storybook/polyfills.js),
+[Carbon React documentation](https://github.com/carbon-design-system/carbon/blob/main/packages/react/.storybook/polyfills.js),
 go ahead and add these imports to the top of the root `index.js`. They aren't
 all needed, but we'll add them all to play it safe for the duration of the
 tutorial.
@@ -236,9 +236,7 @@ We can now add our component to the first row, along with a header, like so:
         <a href="/">Getting started</a>
       </BreadcrumbItem>
     </Breadcrumb>
-    <h1 className="landing-page__heading">
-      Design &amp; build with Carbon
-    </h1>
+    <h1 className="landing-page__heading">Design &amp; build with Carbon</h1>
   </div>
 </div>
 ```
