--- a/src/pages/developing/react-tutorial/step-4.mdx
+++ b/src/pages/developing/react-tutorial/step-4.mdx
@@ -352,10 +352,7 @@ Starting with layout, add the following to `src/components/Info/_info.scss`.
 
 Once you save, go ahead and resize your browser to see the responsive layout at
 the different breakpoints. Make sure to review these color and spacing tokens.
-There are also a few breakpoint mixins that may be new to you. The
-`@carbon/layout`
-[SassDoc](https://github.com/carbon-design-system/carbon/blob/master/packages/layout/docs/sass.md)
-is a great reference to see what all is available.
+There are also a few breakpoint mixins that may be new to you.
 
 ### Type
 
