--- a/src/pages/guidelines/2x-grid/overview.mdx
+++ b/src/pages/guidelines/2x-grid/overview.mdx
@@ -41,7 +41,7 @@ creative decision-making.
 <Column colLg={4} colMd={4}  noGutterSm>
   <ResourceCard
     subTitle="Elements package: Grid"
-    href="https://github.com/carbon-design-system/carbon/tree/master/packages/grid"
+    href="https://github.com/carbon-design-system/carbon/tree/main/packages/grid"
     >
 
 <MdxIcon name="github" />
@@ -181,7 +181,7 @@ breakpoints.
 
 Create custom breakpoints to accommodate special needs, by writing your own
 media queries and CSS rules. Refer to the
-[grid code package](https://github.com/carbon-design-system/carbon/tree/master/packages/grid)
+[grid code package](https://github.com/carbon-design-system/carbon/tree/main/packages/grid)
 for more information.
 
 | Breakpoint | Value (px/rem) | Columns | Size (%) | Size  | Padding | Margin |
@@ -387,8 +387,8 @@ Choose a size to use as your fixed base unit. Also see the
 
 For fluid grids, the column width is the base unit. Just as a box can span
 multiple columns, its height is a multiple of column width. Use cases are
-leading section in a webpage, divided section for editorial content, modals, etc.
-Check out the [breakpoints table](#breakpoints) for pixel sizings.
+leading section in a webpage, divided section for editorial content, modals,
+etc. Check out the [breakpoints table](#breakpoints) for pixel sizings.
 
 ![Fluid base unit](images/Layout_overview_Fluid-base-unit.svg)
 
