--- a/src/pages/developing/angular-tutorial/step-4.mdx
+++ b/src/pages/developing/angular-tutorial/step-4.mdx
@@ -381,9 +381,7 @@ component to give any data to the `InfoCard` because we first need to tell
 
 ```html path=src/app/info/info-card/info-card.component.html
 <div class="info-card">
-  <h4 class="info-card__heading">
-    {{heading}}
-  </h4>
+  <h4 class="info-card__heading">{{heading}}</h4>
   <div class="info-card__body">{{content}}</div>
 </div>
 ```
@@ -563,10 +561,7 @@ Starting with layout, add the following to
 
 Once you save, go ahead and resize your browser to see the responsive layout at
 the different breakpoints. Make sure to review these color and spacing tokens.
-There are also a few breakpoint mixins that may be new to you. The
-`@carbon/layout`
-[SassDoc](https://github.com/carbon-design-system/carbon/blob/master/packages/layout/docs/sass.md)
-is a great reference to see what all is available.
+There are also a few breakpoint mixins that may be new to you.
 
 ### Type
 
