--- a/src/pages/developing/vue-tutorial/step-4.mdx
+++ b/src/pages/developing/vue-tutorial/step-4.mdx
@@ -433,10 +433,7 @@ Starting with layout, add the style section to
 
 Once you save, go ahead and resize your browser to see the responsive layout at
 the different breakpoints. Make sure to review these color and spacing tokens.
-There are also a few breakpoint mixins that may be new to you. The
-`@carbon/layout`
-[SassDoc](https://github.com/carbon-design-system/carbon/blob/master/packages/layout/docs/sass.md)
-is a great reference to see what all is available.
+There are also a few breakpoint mixins that may be new to you.
 
 ### Type
 
@@ -468,9 +465,7 @@ Then, update `InfoCard.vue` to use `splitHeading`.
 Replacing
 
 ```html path=src/components/InfoSection/InfoCard.vue
-<h4 class="info-card__heading">
-  {{heading}}
-</h4>
+<h4 class="info-card__heading">{{heading}}</h4>
 ```
 
 with
