--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -36,8 +36,8 @@ Wide tearsheet, and Full page.
 
 ## Overview
 
-Users often need to create different types of assets, and they can have simple or
-complex requirements.
+Users often need to create different types of assets, and they can have simple
+or complex requirements.
 
 To create is to generate a new resource. Creating is distinct from adding, but
 the two are often confused. To add a resource is to include a resource that
@@ -59,6 +59,7 @@ Do not use this pattern for [adding or editing a resource](#Related-use-cases).
 ## Inline creation
 
 #### When to use
+
 With quick, simple creations like that of an item, it is usually preferred to
 keep the flow inline. This is especially true when the user could benefit from
 seeing context in the page while creating. The inline create pattern is under
@@ -66,6 +67,7 @@ construction, as it needs to account for many different use cases. Below is an
 example of an inline creation.
 
 #### When not to use
+
 Another factor to consider with quick, simple creations is whether or not the
 flow is transitional. Use a Modal if the user is being taken to a different page
 than the one where they initiated the create. For example, if the newly created
@@ -88,7 +90,6 @@ respectively.
 <Caption>Example of an inline create</Caption> 
 </Column>
 </Row>
-
 
 ## Modal
 
@@ -123,12 +124,12 @@ respectively.
 4. **Buttons:** The primary and secondary buttons are "Create" and "Cancel",
    respectively.
 
-
 ## Side panel
 
 #### When to use
 
-- Use a side panel when the user needs to have page context while populating the side panel.
+- Use a side panel when the user needs to have page context while populating the
+  side panel.
 
 #### When not to use
 
@@ -164,18 +165,18 @@ respectively.
 </Column>
 </Row>
 
-
 ## Narrow tearsheet
 
 #### When to use
 
 - Use a narrow tearsheet as an alternative to a modal when there is scrolling.
-- Use when the form fields can be broken down into sections using section headers.
+- Use when the form fields can be broken down into sections using section
+  headers.
 
 #### When not to use
 
-- Don't use if the flow has high complexity and the user would
-  benefit from having a visible progress indicator.
+- Don't use if the flow has high complexity and the user would benefit from
+  having a visible progress indicator.
 
 ### Anatomy of a tearsheet
 
@@ -204,7 +205,6 @@ respectively.
 
 </Column>
 </Row>
-
 
 ## Wide tearsheet
 
@@ -336,7 +336,6 @@ consequences, show a modal alerting them that the changes won't be saved.
 </Column>
 </Row>
 
-
 ## Full page
 
 <InlineNotification>
@@ -421,8 +420,8 @@ links.
 
 Full page create flows can be exited not only by clicking on "Cancel", but also
 by navigating away by clicking on breadcrumbs or other page navigation. When the
-user tries to exit the Create flow by any means other than explicitly clicking on
-the word "Cancel", we must show a confirmation modal.
+user tries to exit the Create flow by any means other than explicitly clicking
+on the word "Cancel", we must show a confirmation modal.
 
 <Row>
 <Column colLg={8}>
