--- a/src/pages/community/patterns/import-pattern/index.mdx
+++ b/src/pages/community/patterns/import-pattern/index.mdx
@@ -207,8 +207,9 @@ press.
    & drop area.
 2. On `Tab`, focus is applied to the second field that accepts user input. If
    the URL field option is present, focus is applied to this.
-3. If enabled, on `Tab`, focus is applied to the primary button (for example Save or
-   Next). An Import button should not be enabled until a file is selected.
+3. If enabled, on `Tab`, focus is applied to the primary button (for example
+   Save or Next). An Import button should not be enabled until a file is
+   selected.
 4. On `Tab`, focus is applied to the Cancel button.
 
 The user cycles input methods using `Tab` and hits `Return` to activate their
@@ -269,14 +270,15 @@ adding more files and removing the selected files.
   to add another.
 - If the method used was the file uploader, on `Tab`, apply focus to the URL
   field.
-- On `Tab`, apply focus to the remove icon on the added file(s), moving
-  through each using `Tab`.
+- On `Tab`, apply focus to the remove icon on the added file(s), moving through
+  each using `Tab`.
 
 #### On reaching the maximum number of added files
 
-In some use cases, there are a maximum number of allowed files. In this situation,
-the file selection methods are in disabled state. Focus cycles between the
-selected files remove actions, and moving to the next section of the page.
+In some use cases, there are a maximum number of allowed files. In this
+situation, the file selection methods are in disabled state. Focus cycles
+between the selected files remove actions, and moving to the next section of the
+page.
 
 1. On returning to the page/panel from the final file uploader/add file
    interaction, (after any optional loading state) focus is applied to the
@@ -284,7 +286,6 @@ selected files remove actions, and moving to the next section of the page.
 2. On keying `Tab`, focus moves through the remove icon of each uploaded file.
 3. On continued use of `Tab`, focus is applied to the next section or
    interaction in the page.
-
 
 ## Feedback
 
