--- a/src/pages/developing/angular-tutorial/step-2.mdx
+++ b/src/pages/developing/angular-tutorial/step-2.mdx
@@ -216,13 +216,9 @@ We can now add our component to the first row, along with a header, like so:
 <div ibmRow class="landing-page__banner">
   <div ibmCol [columnNumbers]="{'lg': 16}">
     <ibm-breadcrumb noTrailingSlash="true">
-      <ibm-breadcrumb-item href="/">
-        Getting started
-      </ibm-breadcrumb-item>
+      <ibm-breadcrumb-item href="/"> Getting started </ibm-breadcrumb-item>
     </ibm-breadcrumb>
-    <h1 class="landing-page__heading">
-      Design &amp; build with Carbon
-    </h1>
+    <h1 class="landing-page__heading">Design &amp; build with Carbon</h1>
   </div>
 </div>
 ```
