--- a/src/pages/developing/vue-tutorial/step-1.mdx
+++ b/src/pages/developing/vue-tutorial/step-1.mdx
@@ -408,9 +408,8 @@ straight to the main content.
 
 **Note:** It's important that the `TutorialHeader` has the Carbon `CvHeader` as
 it's containing element, as we'll later be rendering `TutorialHeader` in
-`App.vue` as a preceding sibling of `Content`, another UI Shell component.
-Those components need to live one after another for the UI Shell to properly
-render.
+`App.vue` as a preceding sibling of `Content`, another UI Shell component. Those
+components need to live one after another for the UI Shell to properly render.
 
 </InlineNotification>
 
