--- a/src/pages/developing/vue-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/vue-tutorial/wrapping-up.mdx
@@ -40,7 +40,10 @@ available to anybody who completes the tutorial, not just IBM employees.
 
 ## Badge information
 
-For more information about the IBM Carbon Design System Developer Essentials - Vue badge, see the [Acclaim](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-vue) site. 
+For more information about the IBM Carbon Design System Developer Essentials -
+Vue badge, see the
+[Acclaim](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-vue)
+site.
 
 ### Badge process
 
