--- a/src/pages/developing/vue-tutorial/step-2.mdx
+++ b/src/pages/developing/vue-tutorial/step-2.mdx
@@ -240,9 +240,7 @@ Modify the second row to use the `Tab` component.
         <div class="bx--grid bx--grid--no-gutter bx--grid--full-width">
           <div class="bx--row landing-page__tab-content">
             <div class="bx--col-md-4 bx--col-lg-7">7/16</div>
-            <div class="bx--col-md-4 bx--offset-lg-1 bx--col-lg-8">
-              8/16
-            </div>
+            <div class="bx--col-md-4 bx--offset-lg-1 bx--col-lg-8">8/16</div>
           </div>
         </div>
       </cv-tab>
@@ -539,8 +537,8 @@ units.
 }
 ```
 
-We also need to adjust our vertical spacing and type treatment. Like before, it's
-a matter of using spacing and type tokens like so:
+We also need to adjust our vertical spacing and type treatment. Like before,
+it's a matter of using spacing and type tokens like so:
 
 <Row>
 <Column colLg={8}>
