update and simplify Agular tutorial to reflect changes in recent versions of Angular and components-angular

--- a/src/pages/developing/angular-tutorial/step-2.mdx
+++ b/src/pages/developing/angular-tutorial/step-2.mdx
@@ -885,8 +885,10 @@ to "Compare & pull request". In doing so, make sure that you are comparing to
 
 <InlineNotification>
 
-**Note:** Expect your tutorial step PRs to be reviewed by the Carbon team but
-not merged. We'll close your PR so we can keep the repository's remote branches
-pristine and ready for the next person!
+**Note:** Your tutorial step will be automatically reviewed based on the status
+of your tests. Ensure that your tests pass when you submit your PR. Expect your
+tutorial step PRs to be reviewed by the Carbon team but not merged. We'll close
+your PR so we can keep the repository's remote branches pristine and ready for
+the next person!
 
 </InlineNotification>
