--- a/src/pages/components/radio-button/usage.mdx
+++ b/src/pages/components/radio-button/usage.mdx
@@ -29,8 +29,8 @@ one selection from the group is allowed.
 ## Overview
 
 Radio buttons are used for mutually exclusive choices, not for multiple choices.
-Only one radio button can be selected at a time. When a user chooses a new
-item, the previous choice is automatically deselected.
+Only one radio button can be selected at a time. When a user chooses a new item,
+the previous choice is automatically deselected.
 
 ### When to use
 
@@ -330,8 +330,8 @@ the [accessibility tab](https://www.carbondesignsystem.com/components/radio-but
 
 #### Screenreader
 
-VoiceOver: Users can navigate between radio buttons by pressing the `Up` and `Down`
-arrow keys.
+VoiceOver: Users can navigate between radio buttons by pressing the `Up` and
+`Down` arrow keys.
 
 JAWS: Users can navigate between radio buttons by pressing the `Up` and `Down`
 arrow keys.
