--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -26,7 +26,7 @@ peers, and getting reviews on work in progress.
 <Column colLg={7} colMd={5}>
 
 <h2>
-  Carbon and IDL weekly playback
+  Carbon and IDL weekly design playbacks
   <span>Fridays, 12pm–1pm Central</span>
 </h2>
 
@@ -54,7 +54,7 @@ along to see other work in progress and learn that way.
 <Column colLg={7} colMd={5}>
 
 <h2>
-  Data visualization weekly playback
+  Data visualization weekly playbacks
   <span>Wednesdays, 10am–11am Central</span>
 </h2>
 
