[docs] update button link for weekly playbacks (#2159)
* [docs] update button link for weekly playbacks

Meetups page:
- Updated the tertiary button to say `Enroll` for the Weekly Playbacks section.
- Linked tertiary button to our YL event page for people to directly enroll to get meeting invites.

* fix(meetsups): use href

* update: heading content

* update: content

* Update src/pages/whats-happening/meetups/index.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -26,7 +26,7 @@ peers, and getting reviews on work in progress.
 <Column colLg={7} colMd={5}>
 
 <h2>
-  Weekly design playback
+  Carbon and IDL weekly design playbacks
   <span>Fridays, 12pm–1pm Central</span>
 </h2>
 
@@ -39,8 +39,8 @@ along to see other work in progress and learn that way.
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
-  Email us
+  href="https://ec.yourlearning.ibm.com/w3/series/10163237">
+  Enroll
 </Button>
 
 </Column>
@@ -54,7 +54,7 @@ along to see other work in progress and learn that way.
 <Column colLg={7} colMd={5}>
 
 <h2>
-  Data visualization weekly playback
+  Data visualization weekly playbacks
   <span>Wednesdays, 10am–11am Central</span>
 </h2>
 
