docs: steering committee updates

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -104,9 +104,9 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Sophia Levens headshot](/images/team/levens_sophia.png)
 
 </Profile>
-<Profile name="Robin Cannon" title="Program Director, Carbon; Co-chair, Steering committee">
+<Profile name="Tricia Garrett" title="Design Principal, Master Inventor, Watson Health; Co-chair, Steering committee">
 
-![Robin Cannon headshot](/images/team/cannon_robin.png)
+![Tricia Garrett headshot](/images/team/garrett_tricia.png)
 
 </Profile>
 <Profile name="Mike Abbink" title="IBM Distinguished Designer, Carbon">
@@ -124,9 +124,19 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Cameron Calder headshot](/images/team/calder_cameron.png)
 
 </Profile>
-<Profile name="Tricia Garrett" title="Design Principal, Master Inventor, Watson Health">
+<Profile name="Robin Cannon" title="Global Director of Design Systems, IBM iX">
 
-![Tricia Garrett headshot](/images/team/garrett_tricia.png)
+![Robin Cannon headshot](/images/team/cannon_robin.png)
+
+</Profile>
+<Profile name="Linda Carotenuto" title="Offering Manager, Digital Design Squad, Carbon for IBM.com">
+
+![Linda Carotenuto headshot](/images/team/carotenuto_linda.png)
+
+</Profile>
+<Profile name="Jan Child" title="Content Design and Strategy Lead, Carbon">
+
+![Jan Child headshot](/images/team/child_jan.png)
 
 </Profile>
 <Profile name="David Levinson" title="IBM Design Principal, IBM Cloud and Cognitive Software">
@@ -144,6 +154,11 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Tessa Rodes headshot](/images/team/rodes_tessa.png)
 
 </Profile>
+<Profile name="Matt Rosno" title="Offering Manager, Carbon">
+
+![Matt Rosno headshot](/images/team/rosno_matt.png)
+
+</Profile>
 <Profile name="Jeannie Servaas" title="IBM Design Principal, Carbon">
 
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
@@ -152,11 +167,6 @@ increases the internal and external eminence of Carbon Design System and IBM.
 <Profile name="JD Speer" title="Design Lead, IBM Storage">
 
 ![JD Speer headshot](/images/team/speer_jd.png)
-
-</Profile>
-<Profile name="Wonil Suh" title="IBM Design Principal, Digital Growth and Commerce">
-
-![Wonil Suh headshot](/images/team/suh_wonil.png)
 
 </Profile>
 <Profile name="Marko Thorhauer" title="Executive Creative Director, IBM Design Principal, IBM iX">
