--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -38,7 +38,7 @@ and successful in designing digital experiences and products.
 ![Andrea Cardona headshot](/images/team/cardona_andrea.png)
 
 </Profile>
-<Profile name="Jan Child" title="Content Design Lead">
+<Profile name="Jan Child" title="Content Design and Strategy Lead">
 
 ![Jan Child headshot](/images/team/child_jan.png)
 
